--- a/BeamtenBot/.classpath
+++ b/BeamtenBot/.classpath
@@ -2,21 +2,25 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="D:/Studium/Java Programme/pircbot-1.5.0/pircbot-1.5.0/pircbot.jar">
+	<classpathentry kind="lib" path="lib/commons-configuration-1.8.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/D:/Studium/Java Programme/pircbot-1.5.0/pircbot-1.5.0/javadocs/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/BeamtenBot/lib/commons-configuration-1.8-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Studium/Java Programme/commons-configuration-1.8-bin/commons-configuration-1.8/commons-configuration-1.8.jar" sourcepath="D:/Studium/Java Programme/commons-configuration-1.8-bin/commons-configuration-1.8/commons-configuration-1.8-sources.jar">
+	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/D:/Studium/Java Programme/commons-configuration-1.8-bin/commons-configuration-1.8/commons-configuration-1.8-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/BeamtenBot/lib/commons-lang-2.6-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Studium/Java Programme/commons-lang-2.6-bin/commons-lang-2.6/commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="D:/Studium/Java Programme/commons-logging-1.1.1-bin/commons-logging-1.1.1/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="/andjoy/jdom.jar">
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://jdom.org/docs/apidocs/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/BeamtenBot/lib/commons-logging-1.1.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/jdom.jar"/>
+	<classpathentry kind="lib" path="lib/pircbot.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/Michael/Desktop/workspace/BeamtenBot/lib/pircbot_javadocs/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
