--- a/BeamtenBot/.classpath
+++ b/BeamtenBot/.classpath
@@ -23,5 +23,6 @@
 			<attribute name="javadoc_location" value="file:/C:/Users/Michael/Desktop/workspace/BeamtenBot/lib/pircbot_javadocs/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
