--- a/BeamtenBot/.classpath
+++ b/BeamtenBot/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre6"/>
 	<classpathentry kind="lib" path="lib/commons-configuration-1.8.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/BeamtenBot/lib/commons-configuration-1.8-javadoc.jar!/"/>
