Properties erweitert (Nickname des Bots, Channelliste für Autojoin). TS3-Channelquery hübscher formatiert.

--- a/BeamtenBot/connection.properties
+++ b/BeamtenBot/connection.properties
@@ -1,9 +1,21 @@
+# TS3-Verbindungsdaten
 ts3_ip=127.0.0.1
 ts3_port=9987
 ts3_pw=
+
+# TS3-ServerQuery-Verbindungsdaten
 ts3_serverquery_name=serveradmin
 ts3_serverquery_password=Lr2lOMVh
 ts3_serverquery_port=10011
+
+# IRC-Serververbindungsdaten
 irc_hostname=h1930837.stratoserver.net
 irc_port=6667
 irc_password=honhon
+
+# Nickname des Bots
+bot_nick=bot
+
+# Channelliste: Channels werden getrennt mit ; - Channels mit Passwort -> siehe #beamtendisco
+# <channel>[ <passwort>]{;<channel>[ <passwort>]}
+channel_list=#lancenter;#beamtendisco hwu4711
