--- a/trunk/BeamtenBot/connection.properties
+++ b/trunk/BeamtenBot/connection.properties
@@ -16,6 +16,9 @@ irc_password=honhon
 # Nickname des Bots
 bot_nick=bot
 
+# Debug-Modus (Konsolenmeldungen)
+debug_mode=true
+
 # Channelliste: Channels werden getrennt mit ; - Channels mit Passwort -> siehe #beamtendisco
 # <channel>[ <passwort>]{;<channel>[ <passwort>]}
 channel_list=#lancenter;#beamtendisco hwu4711
