--- a/trunk/BeamtenBot/connection.properties
+++ b/trunk/BeamtenBot/connection.properties
@@ -5,7 +5,8 @@ ts3_pw=
 
 # TS3-ServerQuery-Verbindungsdaten
 ts3_serverquery_name=serveradmin
-ts3_serverquery_password=Lr2lOMVh
+#ts3_serverquery_password=Lr2lOMVh		##Lenovo
+ts3_serverquery_password=56VvdEM1
 ts3_serverquery_port=10011
 
 # IRC-Serververbindungsdaten
@@ -14,11 +15,13 @@ irc_port=6667
 irc_password=honhon
 
 # Nickname des Bots
-bot_nick=bot
+#bot_nick=bot
+bot_nick=botM
 
 # Debug-Modus (Konsolenmeldungen)
 debug_mode=true
 
 # Channelliste: Channels werden getrennt mit ; - Channels mit Passwort -> siehe #beamtendisco
 # <channel>[ <passwort>]{;<channel>[ <passwort>]}
-channel_list=#lancenter;#beamtendisco hwu4711
+#channel_list=#lancenter;#beamtendisco hwu4711
+channel_list=#test1
