--- a/trunk/Bot/ts3_serverquery.properties
+++ b/trunk/Bot/ts3_serverquery.properties
@@ -6,7 +6,7 @@ ts3_pw=
 ts3_ip_internet=86.134.76.128
 
 ts3_query_account=serveradmin
-ts3_query_pw=56VvdEM1
+ts3_query_pw=
 ts3_query_port=10011
 
 debug_mode=true
