--- a/trunk/Bot/bot.properties
+++ b/trunk/Bot/bot.properties
@@ -1,5 +1,5 @@
 # Name des Bots
-name=bot
+name=bot2
 # Debug Modus
 debug=true
 # Verbose Modus
@@ -11,4 +11,5 @@ port=6667
 # IRC Passwort
 password=honhon
 # Channelliste
-channels=#beamtendisco hwu4711;#lancenter
+#channels=#beamtendisco hwu4711;#lancenter
+channels=#test
